# Vocab-Collector-and-Tester

./: .gitignore  INSTALLATION.md  README.md  errors.py  input_checker.py  input_functions.py  input_manager.py  test_input_manager.py  test_vocab_collector.py  test_vocab_collector_futureversion.py  test_vocab_collector_oop.py  test_wordlist_manager.py  vocab_collector.py  vocab_run.py  wordlist_manager.py
aislyns_vocab/: test_vocab_collector.py
future_versions/: input_manager_future.py  test_vocab_collector_future.py  vocab_collector_future.py  vocab_run_future.py
test/: test_input_manager.py
vocab-lowkey/: pyproject.toml
vocab-lowkey/tests/: test_vocab_collector.py
vocab-lowkey/vocab_lowkey/: __init__.py  vocab_manager.py  wordlist_manager.py
vocabtrainer/: pyproject.toml
vocabtrainer/tests/: test_vocab_collector.py
vocabtrainer/vocabtrainer/: vocab_manager.py  wordlist_manager.py
